# GraphicsLab06-OpenGLContinuation

./: CMakeLists.txt
Part04/: modelLoading.cpp  simpleColor.frag  simpleColor.vert  textureShader.frag  textureShader.vert
Part05/: basicMaterialShader.frag  basicMaterialShader.vert  basicMaterialShaderGouraud.frag  basicMaterialShaderGouraud.vert  basicShading.cpp
Part06/: PostEffect.frag  basicMaterialShader.frag  basicMaterialShader.vert  renderToTexture.cpp
